--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                       </a>
                     </div>
                     <div class="scheme__video">
-                      <a href="https://www.youtube.com/watch?v=4JT0uAykeDI?autoplay=1" class="scheme__video_item" data-fancybox="scheme__images-1">
+                      <a href="https://www.youtube.com/watch?v=4JT0uAykeDI?autoplay=1" class="scheme__video_item">
                         <img src="/scheme/scheme-image.png" alt="">
                       </a>
                     </div>
@@ -212,7 +212,7 @@
                       </a>
                     </div>
                     <div class="scheme__video">
-                      <a href="https://www.youtube.com/watch?v=4JT0uAykeDI?autoplay=1" class="scheme__video_item" data-fancybox="scheme__images-1">
+                      <a href="https://www.youtube.com/watch?v=4JT0uAykeDI?autoplay=1" class="scheme__video_item">
                         <img src="/scheme/scheme-image.png" alt="">
                       </a>
                     </div>
@@ -306,7 +306,7 @@
                       </a>
                     </div>
                     <div class="scheme__video">
-                      <a href="https://www.youtube.com/watch?v=4JT0uAykeDI?autoplay=1" class="scheme__video_item" data-fancybox="scheme__images-1">
+                      <a href="https://www.youtube.com/watch?v=4JT0uAykeDI?autoplay=1" class="scheme__video_item">
                         <img src="/scheme/scheme-image.png" alt="">
                       </a>
                     </div>
